<resources>
    <string name="app_name">FACAMP Network</string>
    <string name="title_market">Mercado</string>
    <string name="title_rides">Caronas</string>
    <string name="title_classes">Aulas</string>
    <string name="title_profile">Perfil</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="price">Preço</string>
    <string name="description">Descrição</string>
    <string name="enter">Entrar</string>
    <string name="add">Adicionar</string>
    <string name="upload_image">Enviar Imagem</string>
    <string name="description_market_add_button">Adicionar Produto</string>
    <string name="description_product_photo">Foto do produto</string>
    <string name="from_colon">Saída:</string>
    <string name="to_colon">Destino:</string>
    <string name="date_and_time">Data e Horário</string>
    <string name="value_from">Valor Saída</string>
    <string name="value_to">Valor Destino</string>
    <string name="subject_colon">Matéria:</string>
    <string name="value_subject">Valor Matéria</string>
    <string name="from">Saída</string>
    <string name="to">Destino</string>
    <string name="sign">Placa</string>
    <string name="subject">Matéria</string>
    <string name="description_foto_perfil">Foto do Perfil</string>
    <string name="name_nickname">Nome, Sobrenome</string>
    <string name="user_tipe">Tipo de Usuário</string>
    <string name="phone">Telefone</string>
    <string name="phone_icon">Ícone do Telefone</string>
    <string name="biography">Biografia</string>
    <string name="seller">Vendedor</string>
    <string name="seller_page">Página do Vendedor</string>
    <string name="delete">Deletar</string>
    <string name="driver_page">Página do Motorista</string>
    <string name="tutor_page">Página do Tutor</string>
    <string name="register">Registrar</string>
    <string name="create_account">Criar Conta</string>
    <string name="description_profile_picture">Foto do Perfil</string>
    <string name="upload_picture">Enviar Foto</string>
    <string name="switch_dark_theme">Tema escuro</string>
    <string name="exit">Sair</string>
    <string name="search">Buscar...</string>
    <string name="search_from">Buscar saída...</string>
    <string name="search_to">Buscar destino...</string>
    <string name="refresh">Atualizar</string>
    <string name="label_product">Produto</string>
    <string name="label_ride">Carona</string>
    <string name="label_class">Aula</string>
    <string name="user">Usuário</string>
    <string name="add_ride">Adicionar Carona</string>
    <string name="add_class">Adicionar Aula</string>
    <string name="add_product">Adicionar Produto</string>
</resources>