<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AdicionarProdutoActivity">

    <ImageView
        android:id="@+id/imageViewProduto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/description_product_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProduto"
        app:layout_constraintEnd_toEndOf="@+id/imageViewProduto"
        app:layout_constraintStart_toStartOf="@+id/imageViewProduto" />

    <EditText
        android:id="@+id/editNomeProduto"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:background="@color/text_background"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="30"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduto" />

    <EditText
        android:id="@+id/editPrecoProduto"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/text_background"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeProduto" />

    <EditText
        android:id="@+id/editDescricaoProduto"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/text_background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:maxLines="8"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrecoProduto" />

    <Button
        android:id="@+id/buttonAdicionarProduto"
        android:layout_width="240dp"
        android:layout_height="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/add"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescricaoProduto" />

</androidx.constraintlayout.widget.ConstraintLayout>