<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/description_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/editNomeRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFoto" />

    <EditText
        android:id="@+id/editLoginRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeRegister" />

    <EditText
        android:id="@+id/editSenhaRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLoginRegister" />

    <EditText
        android:id="@+id/editTelefoneRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenhaRegister" />

    <EditText
        android:id="@+id/editBiografiaRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/biography"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="80"
        android:maxLines="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefoneRegister" />

    <Button
        android:id="@+id/buttonRegistrar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_onclick_ripple"
        android:fontFamily="@font/gill_sans"
        android:text="@string/register"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBiografiaRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>