<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/fotoUsuario"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/description_foto_perfil"
        android:cropToPadding="true"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/textNomeSobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textShortMessage|textNoSuggestions"
        android:text="@string/name_nickname"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoUsuario" />

    <TextView
        android:id="@+id/textTipoUsuario"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/user_tipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomeSobrenome" />

    <EditText
        android:id="@+id/textTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textNoSuggestions|phone"
        android:text="@string/phone"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTipoUsuario" />

    <EditText
        android:id="@+id/textBiografia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textMultiLine|textNoSuggestions"
        android:maxEms="10"
        android:maxLength="80"
        android:text="@string/biography"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefone" />

    <ImageView
        android:id="@+id/imageTelefone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/phone_icon"
        android:src="@android:drawable/stat_sys_speakerphone"
        app:layout_constraintBottom_toBottomOf="@+id/textTelefone"
        app:layout_constraintEnd_toStartOf="@+id/textTelefone"
        app:layout_constraintTop_toTopOf="@+id/textTelefone"
        app:tint="@color/icon_green" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDeleteConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/remove_button"
        android:clickable="true"
        app:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@color/icon" />

    <Switch
        android:id="@+id/switchTemaEscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:fontFamily="@font/gill_sans"
        android:text="@string/switch_dark_theme"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:thumbTint="@color/switch_thumb"
        android:trackTint="@color/switch_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBiografia" />

    <Button
        android:id="@+id/buttonSair"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_onclick_ripple"
        android:fontFamily="@font/gill_sans"
        android:text="@string/exit"
        android:textColor="@color/button_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTemaEscuro" />
</androidx.constraintlayout.widget.ConstraintLayout>