<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CaronaActivity">

    <TextView
        android:id="@+id/textSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/gill_sans"
        android:text="@string/from_colon"
        android:textColor="@color/label_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textValorSaida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textValorSaida" />

    <EditText
        android:id="@+id/textValorSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textShortMessage|textNoSuggestions"
        android:text="@string/from"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textSaida"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/gill_sans"
        android:text="@string/to_colon"
        android:textColor="@color/label_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textValorDestino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textValorDestino" />

    <EditText
        android:id="@+id/textValorDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textShortMessage|textNoSuggestions"
        android:maxEms="10"
        android:maxLength="85"
        android:text="@string/to"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textDestino"
        app:layout_constraintTop_toBottomOf="@+id/textValorSaida" />

    <EditText
        android:id="@+id/textDataCarona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textNoSuggestions|datetime"
        android:maxEms="10"
        android:maxLength="85"
        android:text="@string/date_and_time"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValorDestino" />

    <EditText
        android:id="@+id/textPrecoCarona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textNoSuggestions|numberDecimal"
        android:text="@string/price"
        android:textColor="@color/price_text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPlaca" />

    <EditText
        android:id="@+id/textPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:inputType="textShortMessage|textNoSuggestions"
        android:maxEms="10"
        android:maxLength="85"
        android:text="@string/sign"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDataCarona" />

    <Button
        android:id="@+id/buttonPaginaMotorista"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_onclick_ripple"
        android:fontFamily="@font/gill_sans"
        android:text="@string/driver_page"
        android:textColor="@color/button_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrecoCarona" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDeleteCarona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/remove_button"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@color/icon" />
</androidx.constraintlayout.widget.ConstraintLayout>