<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UsuarioActivity">

    <ImageView
        android:id="@+id/fotoUser"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/description_foto_perfil"
        android:cropToPadding="true"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textNomeUser"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoUser" />

    <TextView
        android:id="@+id/textTipoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:text="@string/user_tipe"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomeUser" />

    <TextView
        android:id="@+id/textTelefoneUser"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTipoUser" />

    <TextView
        android:id="@+id/textBiografiaUser"
        android:backgroundTint="@color/text_line"
        android:fontFamily="@font/gill_sans"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxEms="10"
        android:maxLength="80"
        android:text="@string/biography"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefoneUser" />

    <ImageView
        android:id="@+id/imageTelefoneUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/phone_icon"
        android:src="@android:drawable/stat_sys_speakerphone"
        app:layout_constraintBottom_toBottomOf="@+id/textTelefoneUser"
        app:layout_constraintEnd_toStartOf="@+id/textTelefoneUser"
        app:layout_constraintTop_toTopOf="@+id/textTelefoneUser"
        app:tint="@color/icon_green" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/remove_button"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@color/icon" />
</androidx.constraintlayout.widget.ConstraintLayout>